Calendar Progress - Incorporated Russel's monthly calendar prototype - Fixed style issues on the daily calendar - Daily calendar now correctly aligns events on time collision - Fixed bug with remenant easeijs containers, correctly clean up on date   changes

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,7 +41,8 @@
 	position: absolute;
 	left: 7%;
 	height: 100%;
-	width: 100%;
+	width: 93%;
+	padding-right: 7%;
 	border-left: 1px dashed #007cc3
 }
 
